# mpt-base/meson_options.txt: mpt base build options
option('libraries', type : 'combo', choices : ['static', 'shared', 'both'], value : 'both',
       description : 'library types to build')
option('with_cxx', type : 'boolean', value : true,
       description : 'build C++ library/components')
option('with_io', type : 'boolean', value : true,
       description : 'build I/O library/components')
option('with_loader', type : 'boolean', value : true,
       description : 'build loader library/components')
option('with_plot', type : 'boolean', value : true,
       description : 'build plotting library/components')
option('with_tests', type : 'boolean', value : true,
       description : 'create test binaries')
option('lua', type : 'string', value : '5.3',
       description : 'lua target version')
